--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <link rel="stylesheet" href="assets/style.css">
-        <title>
-
-        </title>
+        <title>Web Calculator</title>
+        <link rel="stylesheet" href="assets/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <body>
-            <div class="flex-container-column">
+            <div class="flex-container-column card">
                 <div class="display">
                     <h1 id="displayNumber">0</h1>
                 </div>
@@ -35,6 +35,22 @@
                 </div>
          </div>
          </div>
+         <div class="history card">
+            <h2>Riwayat Perhitungan</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Angka Pertama</th>
+                        <th>Operator</th>
+                        <th>Angka Kedua</th>
+                        <th>Hasil</th>
+                    </tr>
+                </thead>
+                <tbody id="historyList"></tbody>
+            </table>
+         </div>
+         <script src="assets/storage.js"></script>
+         <script src="assets/kalkulator.js"></script>
         </body>
     </head>
 </html>
